Test/exceptions/ParseErrors.dfy.expect
ParseErrors.dfy(8,20): Error: this symbol not expected in VarDeclStatement
ParseErrors.dfy(8,15): Error: ':-' assignments can only have one RHS
2 parse errors detected in ParseErrors.dfy
